# historedge-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sample.env  scraper.Dockerfile
deploy/: env-configmap.yaml
deploy/api/: api-deployment.yaml  api-ingress.yaml  api-service.yaml
deploy/db/: db-deployment.yaml  db-service.yaml  pgdata-persistentvolumeclaim.yaml
deploy/history-distributor/: history-distributor-deployment.yaml
deploy/history-ingester/: history-ingester-deployment.yaml
deploy/history-logger/: history-logger-deployment.yaml
deploy/loki/: loki-ingress.yaml
deploy/realtime-logger/: realtime-logger-deployment.yaml
deploy/redis/: redis-deployment.yaml  redis-service.yaml
deploy/scraper/: scraper-deployment.yaml
deploy/scraper-distributor/: scraper-distributor-deployment.yaml
deploy/stream-breeder/: stream-breeder-job.yaml
historedge_backend/: channel.py  consumer.py  event.py  intercom.py  models.py  producer.py  schemas.py  settings.py  utils.py  worker.py
historedge_backend/api/: app.py  constants.py  event_handlers.py  exception_handlers.py  exceptions.py  logger.py  middleware.py  resources.py  routes.py  settings.py
historedge_backend/api/endpoints/: bookmarks.py  history.py  page_visits.py  pages.py  users.py
historedge_backend/events/: history.py  pages_to_scrape.py  realtime_pages.py
historedge_backend/history_distributor/: service.py
historedge_backend/history_ingester/: service.py
historedge_backend/history_logger/: service.py
historedge_backend/realtime_logger/: service.py
historedge_backend/scraper/: consumer.py  service.py
historedge_backend/scraper_distributor/: service.py
historedge_backend/stream_breeder/: service.py
scripts/: build.sh  clean.sh  deploy-linkerd.sh  deploy.sh  install.sh  run.sh  test.sh
tests/: conftest.py  test_concurrency.py  test_pages.py
