[tool.poetry]
name = "historedge-backend"
version = "0.1.0"
description = "Historedge backend"
authors = ["Pablo Cabezas <headsrooms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14"
uvicorn = "^0.13"
jinja2 = "^2.11"
pyyaml = "^5.3"
itsdangerous = "^1.1"
python-dotenv = "^0.14"
pydantic = "^1.7"
asyncpg = "^0.21"
aredis = "^1.1"
orjson = "^3.4"
playwright = "^0"
selectolax = "^0.2"
aioitertools = "^0.7"
loguru = "^0.5"
httptools = "^0.1"
tortoise-orm = {extras = ["accel"], version = "^0.16"}
aiometer = "^0.2"

[tool.poetry.dev-dependencies]
pytest = { version = "^6.0.0-rc", allow-prereleases = true }
pytest-asyncio = "^0.14"
Faker = "^4.1"
asynctest = "^0.13"
pytest-cov = "^2.10"
safety = "^1.9"
httpx = "^0.14"
asgi-lifespan = "^1.0"
pylint = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


